fixing some text wrapping funkiness

--- a/src/input/css/blocks/footer.css
+++ b/src/input/css/blocks/footer.css
@@ -44,6 +44,10 @@
 			block-size: fit-content;
 			grid-area: sitemap;
 
+			& a {
+				margin-inline: 0;
+			}
+
 			> ul {
 				> li {
 					font-size: var(--font-size-4);
